# vani-anusandhana

./: .editorconfig  .gitattributes  .gitignore  CLAUDE_CODE_PROMPTS.md  CONTRIBUTING.md  CONTRIBUTORS.md  Makefile  NOTICE.md  PILOT_RUNBOOK.md  README.md  SANSKRIT_VOCAB_METHODOLOGY.md  architecture.md  docker-compose.yml  pyproject.toml  requirements.txt  verify_setup.py
.claude/skills/sanskrit-handling/: SKILL.md
.claude/skills/zero-hallucination-rag/: SKILL.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  sanskrit_correction.md
assets/: mockup_preview.html
docs/mockups/: README.md
