[project]
name = "vani-anusandhana"
version = "0.1.0"
description = "Semantic search over a single spiritual teacher's YouTube lectures. Devotees ask questions, get back the exact moments — with deep-links, transcripts, timestamps. Local-first, zero hallucinations."
requires-python = ">=3.11"
license = { text = "AGPL-3.0-or-later" }
readme = "README.md"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
    "N",   # pep8-naming
    "RUF", # ruff-specific rules
]
ignore = [
    "E501",  # line too long — handled by formatter
]

[tool.ruff.lint.isort]
known-first-party = ["app", "scripts"]

[tool.mypy]
python_version = "3.11"
strict = true
files = ["app", "scripts"]

[tool.pytest.ini_options]
testpaths = ["tests"]
